# opentimelineio-node-test

./: .gitignore  .gitmodules  CMakeLists.txt  index.js  package.json  pnpm-lock.yaml  tsconfig.json
src/: hello_world.cc  hello_world.h
tests/: example.otio  test_binding.js
